--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,2 @@
 PORT=3000
+CONNECTION_STRING=mongodb+srv://randomboiii069:<db_password>@freecodecampprojects.amkpvst.mongodb.net/?retryWrites=true&w=majority&appName=FreeCodeCampProjects
