fix: refactor index.js for improved readability and update sample.env for connection string

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,2 @@
 PORT=3000
-CONNECTION_STRING=mongodb+srv://randomboiii069:<db_password>@freecodecampprojects.amkpvst.mongodb.net/?retryWrites=true&w=majority&appName=FreeCodeCampProjects
+MONGO_URI=mongodb+srv://randomboiii069:samsung@freecodecampprojects.amkpvst.mongodb.net/?retryWrites=true&w=majority&appName=FreeCodeCampProjects
